--- a/fineline.html
+++ b/fineline.html
@@ -29,7 +29,7 @@
             <p class="side-title text-title-part-2 m-0">Portofolio</p>
             <div class="links mt-3">
               <div class="link-box">
-                <a class="d-bloc text-gold" href="#">home</a>
+                <a class="d-bloc" href="index.html">home</a>
               </div>
               <div class="link-box">
                 <a class="d-block" href="realism.html">realism</a>
@@ -38,7 +38,7 @@
                 <a class="d-block" href="illustrative.html">illustrative</a>
               </div>
               <div class="link-box">
-                <a class="d-block" href="fineline.html">fineline</a>
+                <a class="d-block text-gold" href="#">fineline</a>
               </div>
               <div class="link-box">
                 <a class="d-block" href="asian.html">asian</a>
@@ -58,71 +58,40 @@
     <!-- Main Section -->
     <section class="main">
 
-      <!-- Header Component -->
-      <div class="container mb-3 pt-5 text-center">
-        <div class="container title-box p-3">
-          <p class="title-font m-0">Hello, i'm Gemm</p>
-          <p class="title-font m-0">This is my art at a glance.</p>
-        </div>
-
-      </div>
-
-
       <!-- Image Component  -->
       <div class="images container">
+
+        <!-- Header Component -->
+        <div class="container text-left">
+          <div class="title-box">
+            <h4 class="text-gold">Fineline</h4>
+          </div>
+        </div>
 
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images/home/1.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/1.JPG" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/home/2.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/2.JPG" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-                <img src="images/home/3.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/fineline/3.JPG" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-                <img src="images/home/4.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/fineline/4.JPG" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/home/5.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/5.JPG" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
             <!-- Second Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images/home/7.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/7.JPG" class="img-fluid constant-size" alt="">
             </div>
-            <div class="col">
-              <img src="images/home/8.JPG" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-                <img src="images/home/9.JPG" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-                <img src="images/home/10.JPG" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-              <img src="images/home/13.JPG" class="img-fluid constant-size" alt="">
-            </div>
-          </div>
-
-          <!-- Third Row -->
-          <div class="row align-items-start my-4">
-            <div class="col">
-              <img src="images/home/12.JPG" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-              <img src="images/home/11.JPG" class="img-fluid constant-size" alt="">
-            </div>
-            <div class="col">
-              <img src="images/home/14.JPG" class="img-fluid constant-size" alt="">
-            </div>
-          </div>
-
-        </div>
 
 
         <!-- Copyright -->
