Added a image description when a user clicks on an image. Also enabled images to enlarge when a user hovers over them.

--- a/realism.html
+++ b/realism.html
@@ -74,16 +74,209 @@
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images/realism/anatomy/1.JPG" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #1-->
+              <img src="images/realism/anatomy/1.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
+
+              <div class="modal fade image-modal-1" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/realism/anatomy/1.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">A skull</h2>
+                            <p class="modal-text">Pencil Drawing </p>
+                            <p class="modal-text">Dimensions: 3" x  3.5"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Charcoal stick
+                              </li>
+                              <li>
+                                General's Charcoal Pencil #555
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                shading stomp
+                              </li>
+                              <li>
+                                kneadable eraser
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <div class="col">
-              <img src="images/realism/anatomy/2.JPG" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #2-->
+              <img src="images/realism/anatomy/2.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
+
+              <div class="modal fade image-modal-2" tabindex="-1" role="dialog" aria-labelledby="image-modal-2" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/realism/anatomy/2.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">smell that?</h2>
+                            <p class="modal-text">Portraiture pencil practice.</p>
+                            <p class="modal-text">Dimensions: 1" x  1.5"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                HB2
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                shading stomp
+                              </li>
+                              <li>
+                                kneadable eraser
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <div class="col">
-                <img src="images/realism/anatomy/3.JPG" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #3-->
+              <img src="images/realism/anatomy/3.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
+
+              <div class="modal fade image-modal-3" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/realism/anatomy/3.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Deux Yeux</h2>
+                            <p class="modal-text">Pencil Drawing </p>
+                            <p class="modal-text">Dimensions: 4" x 1.6"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Sharpie Fine Tip Marker
+                              </li>
+                              <li>
+                                General's Charcoal Pencil #555
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                shading stomp
+                              </li>
+                              <li>
+                                kneadable eraser
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <div class="col">
-                <img src="images/realism/anatomy/4.JPG" class="img-fluid constant-size" alt="">
+              <!-- Image Modal #4-->
+              <img src="images/realism/anatomy/4.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
+
+              <div class="modal fade image-modal-4" tabindex="-1" role="dialog" aria-labelledby="image-modal-4" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-body">
+                    <div class="modal-content">
+                      <div class="text-left pt-3 pr-3">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                           <span aria-hidden="true">&times;</span>
+                         </button>
+                      </div>
+                      <div class="container-fluid p-5">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <img src="images/realism/anatomy/4.JPG" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-md-6">
+                            <h2 class="modal-title">Heart Skull</h2>
+                            <p class="modal-text">Pencil Drawing </p>
+                            <p class="modal-text">Dimensions: 3" x 7"</p>
+                            <p class="modal-text">Materials:</p>
+                            <ul class="modal-text">
+                              <li>
+                                Charcoal stick
+                              </li>
+                              <li>
+                                General's Charcoal Pencil #555
+                              </li>
+                              <li>
+                                0.7 mechanical pencil
+                              </li>
+                              <li>
+                                0.5 mechanical pencil
+                              </li>
+                              <li>
+                                shading stomp
+                              </li>
+                              <li>
+                                kneadable eraser
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <div class="col">
               <img src="images/realism/anatomy/5.JPG" class="img-fluid constant-size" alt="">
