--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col">
 
               <!-- Image Modal #1-->
-              <img src="images/home/1.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
+              <img src="images/home/1.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-1">
 
               <div class="modal fade image-modal-1" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -90,7 +90,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/1.JPG" class="img-fluid" alt="">
+                            <img src="images/home/1.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Foo Dog w Skull</h2>
@@ -132,7 +132,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #2-->
-              <img src="images/home/2.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
+              <img src="images/home/2.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-2">
 
               <div class="modal fade image-modal-2" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -146,7 +146,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/2.JPG" class="img-fluid" alt="">
+                            <img src="images/home/2.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Broken Heart</h2>
@@ -183,7 +183,7 @@
             <div class="col">
 
               <!-- Image Modal #3-->
-              <img src="images/home/3.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
+              <img src="images/home/3.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-3">
 
               <div class="modal fade image-modal-3" tabindex="-1" role="dialog" aria-labelledby="image-modal-3" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -197,7 +197,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/3.JPG" class="img-fluid" alt="">
+                            <img src="images/home/3.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Watching you</h2>
@@ -235,7 +235,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #4-->
-              <img src="images/home/4.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
+              <img src="images/home/4.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-4">
 
               <div class="modal fade image-modal-4" tabindex="-1" role="dialog" aria-labelledby="image-modal-4" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -249,7 +249,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/4.JPG" class="img-fluid" alt="">
+                            <img src="images/home/4.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Single Rose</h2>
@@ -286,7 +286,7 @@
             <div class="col">
 
               <!-- Image Modal #5-->
-              <img src="images/home/5.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-5">
+              <img src="images/home/5.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-5">
 
               <div class="modal fade image-modal-5" tabindex="-1" role="dialog" aria-labelledby="image-modal-5" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -300,7 +300,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/5.JPG" class="img-fluid" alt="">
+                            <img src="images/home/5.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Cherry Blossom Duo</h2>
@@ -381,7 +381,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #7-->
-              <img src="images/home/7.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-7">
+              <img src="images/home/7.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-7">
 
               <div class="modal fade image-modal-7" tabindex="-1" role="dialog" aria-labelledby="image-modal-7" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -395,7 +395,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/7.JPG" class="img-fluid" alt="">
+                            <img src="images/home/7.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Thirsty?</h2>
@@ -430,7 +430,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #8-->
-              <img src="images/home/8.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-8">
+              <img src="images/home/8.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-8">
 
               <div class="modal fade image-modal-8" tabindex="-1" role="dialog" aria-labelledby="image-modal-1" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -444,7 +444,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/8.JPG" class="img-fluid" alt="">
+                            <img src="images/home/8.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Thomas Bear</h2>
@@ -470,7 +470,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #9-->
-              <img src="images/home/9.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-9">
+              <img src="images/home/9.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-9">
 
               <div class="modal fade image-modal-9" tabindex="-1" role="dialog" aria-labelledby="image-modal-9" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -484,7 +484,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/9.JPG" class="img-fluid" alt="">
+                            <img src="images/home/9.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Blooming</h2>
@@ -519,7 +519,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #10-->
-              <img src="images/home/10.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-10">
+              <img src="images/home/10.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-10">
 
               <div class="modal fade image-modal-10" tabindex="-1" role="dialog" aria-labelledby="image-modal-10" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -533,7 +533,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/10.JPG" class="img-fluid" alt="">
+                            <img src="images/home/10.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Minimalist Peony</h2>
@@ -556,7 +556,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #13-->
-              <img src="images/home/13.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-13">
+              <img src="images/home/13.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-13">
 
               <div class="modal fade image-modal-13" tabindex="-1" role="dialog" aria-labelledby="image-modal-13" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -570,7 +570,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/13.JPG" class="img-fluid" alt="">
+                            <img src="images/home/13.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Deux Yeux</h2>
@@ -612,7 +612,7 @@
           <div class="row align-items-start my-4">
             <div class="col">
               <!-- Image Modal #12-->
-              <img src="images/home/12.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-12">
+              <img src="images/home/12.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-12">
 
               <div class="modal fade image-modal-12" tabindex="-1" role="dialog" aria-labelledby="image-modal-12" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -626,7 +626,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/12.JPG" class="img-fluid" alt="">
+                            <img src="images/home/12.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">A skull</h2>
@@ -664,7 +664,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #11-->
-              <img src="images/home/11.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-11">
+              <img src="images/home/11.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-11">
 
               <div class="modal fade image-modal-11" tabindex="-1" role="dialog" aria-labelledby="image-modal-11" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -678,7 +678,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/11.JPG" class="img-fluid" alt="">
+                            <img src="images/home/11.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Geometric Teddy Linework</h2>
@@ -716,7 +716,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #14-->
-              <img src="images/home/14.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-14">
+              <img src="images/home/14.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-14">
 
               <div class="modal fade image-modal-14" tabindex="-1" role="dialog" aria-labelledby="image-modal-14" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -730,7 +730,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/14.JPG" class="img-fluid" alt="">
+                            <img src="images/home/14.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Broken Heart</h2>
@@ -765,7 +765,7 @@
             </div>
             <div class="col">
               <!-- Image Modal #15-->
-              <img src="images/home/15.JPG" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-15">
+              <img src="images/home/15.jpg" class="img-fluid constant-size zoom" alt=""  data-toggle="modal" data-target=".image-modal-15">
 
               <div class="modal fade image-modal-15" tabindex="-1" role="dialog" aria-labelledby="image-modal-15" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
@@ -779,7 +779,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/15.JPG" class="img-fluid" alt="">
+                            <img src="images/home/15.jpg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">My left hand</h2>
