Corrected all the image types in the web pages.

--- a/asian.html
+++ b/asian.html
@@ -71,26 +71,26 @@
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images/asian/1.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/asian/1.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/asian/2.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/asian/2.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-                <img src="images/asian/3.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/asian/3.jpg" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-                <img src="images/asian/4.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/asian/4.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/asian/5.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/asian/5.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/asian/5.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/asian/5.jpg" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
