--- a/illustrative.html
+++ b/illustrative.html
@@ -74,67 +74,67 @@
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images//illustrative/linework/1.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/1.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/2.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/2.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-                <img src="images//illustrative/linework/3.JPG" class="img-fluid constant-size" alt="">
+                <img src="images//illustrative/linework/3.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-                <img src="images//illustrative/linework/4.JPG" class="img-fluid constant-size" alt="">
+                <img src="images//illustrative/linework/4.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/5.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/5.jpg" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
             <!-- Second Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images//illustrative/linework/6.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/6.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/7.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/7.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/8.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/8.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-                <img src="images//illustrative/linework/9.JPG" class="img-fluid constant-size" alt="">
+                <img src="images//illustrative/linework/9.jpg" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
           <!-- Third Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-                <img src="images//illustrative/linework/10.JPG" class="img-fluid constant-size" alt="">
+                <img src="images//illustrative/linework/10.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/11.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/11.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/12.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/12.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/13.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/13.jpg" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
           <!-- Fourth Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images//illustrative/linework/14.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/14.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/15.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/15.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/16.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/16.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images//illustrative/linework/17.JPG" class="img-fluid constant-size" alt="">
+              <img src="images//illustrative/linework/17.jpg" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
@@ -148,66 +148,66 @@
             <!-- First Row -->
             <div class="row align-items-start my-4">
               <div class="col">
-                <img src="images/illustrative/miscellaneous//1.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//1.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//2.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//2.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                  <img src="images/illustrative/miscellaneous//3.JPG" class="img-fluid constant-size" alt="">
+                  <img src="images/illustrative/miscellaneous//3.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                  <img src="images/illustrative/miscellaneous//4.JPG" class="img-fluid constant-size" alt="">
+                  <img src="images/illustrative/miscellaneous//4.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//5.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//5.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//6.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//6.jpg" class="img-fluid constant-size" alt="">
               </div>
             </div>
 
               <!-- Second Row -->
             <div class="row align-items-start my-4">
               <div class="col">
-                <img src="images/illustrative/miscellaneous//7.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//7.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//8.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//8.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                  <img src="images/illustrative/miscellaneous//9.JPG" class="img-fluid constant-size" alt="">
+                  <img src="images/illustrative/miscellaneous//9.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                  <img src="images/illustrative/miscellaneous//10.JPG" class="img-fluid constant-size" alt="">
+                  <img src="images/illustrative/miscellaneous//10.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//13.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//13.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//14.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//14.jpg" class="img-fluid constant-size" alt="">
               </div>
             </div>
 
               <!-- Thrid Row -->
             <div class="row align-items-start my-4">
               <div class="col">
-                <img src="images/illustrative/miscellaneous//15.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//15.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//16.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//16.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                  <img src="images/illustrative/miscellaneous//17.JPG" class="img-fluid constant-size" alt="">
+                  <img src="images/illustrative/miscellaneous//17.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                  <img src="images/illustrative/miscellaneous//10.JPG" class="img-fluid constant-size" alt="">
+                  <img src="images/illustrative/miscellaneous//10.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//13.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//13.jpg" class="img-fluid constant-size" alt="">
               </div>
               <div class="col">
-                <img src="images/illustrative/miscellaneous//14.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/illustrative/miscellaneous//14.jpg" class="img-fluid constant-size" alt="">
               </div>
             </div>
 
