--- a/fineline.html
+++ b/fineline.html
@@ -71,26 +71,26 @@
           <!-- First Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-              <img src="images/fineline/1.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/1.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/fineline/2.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/2.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-                <img src="images/fineline/3.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/fineline/3.jpg" class="img-fluid constant-size" alt="">
             </div>
           </div>
 
             <!-- Second Row -->
           <div class="row align-items-start my-4">
             <div class="col">
-                <img src="images/fineline/4.JPG" class="img-fluid constant-size" alt="">
+                <img src="images/fineline/4.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/fineline/5.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/5.jpg" class="img-fluid constant-size" alt="">
             </div>
             <div class="col">
-              <img src="images/fineline/7.JPG" class="img-fluid constant-size" alt="">
+              <img src="images/fineline/7.jpg" class="img-fluid constant-size" alt="">
             </div>
 
 
