--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                       <div class="container-fluid p-5">
                         <div class="row">
                           <div class="col-md-6">
-                            <img src="images/home/namine-1.JPEG" class="img-fluid" alt="">
+                            <img src="images/home/namine-1.jpeg" class="img-fluid" alt="">
                           </div>
                           <div class="col-md-6">
                             <h2 class="modal-title">Naminé - Kingdom Hearts</h2>
